[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "larapy_framework"
version = "0.9.0"
description = "Modern Python web framework inspired by Laravel"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Larapy Team", email = "team@larapy.dev"}
]
keywords = ["web", "framework", "laravel", "orm", "eloquent", "mvc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Database ORM
    "sqlalchemy>=2.0.0",
    
    # Security & Encryption
    "bcrypt>=4.0.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=41.0.0",
    
    # HTTP & Utilities
    "requests>=2.31.0",
    "pytz>=2023.3",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing & Development
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "faker>=20.0.0",  # For database seeding in development
]
database = [
    # Async database drivers (optional)
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
]
storage = [
    # Cloud storage drivers (optional)
    "boto3>=1.28.0",
    "aiofiles>=23.2.0",
]
queue = [
    # Queue backends (optional)
    "redis>=5.0.0",
    "celery>=5.3.4",
    "psutil>=5.9.0",  # For queue worker monitoring
]
broadcasting = [
    # Broadcasting drivers (optional)
    "pusher>=3.3.0",
    "redis>=5.0.0",
]
all = [
    # All optional dependencies
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "boto3>=1.28.0",
    "aiofiles>=23.2.0",
    "redis>=5.0.0",
    "celery>=5.3.4",
    "pusher>=3.3.0",
    "psutil>=5.9.0",
    "faker>=20.0.0",
]

[project.urls]
Homepage = "https://larapy.dev"
Documentation = "https://docs.larapy.dev"
Repository = "https://github.com/larapy-lab/framework"
Changelog = "https://github.com/larapy-lab/framework/blob/main/CHANGELOG.md"
Issues = "https://github.com/larapy-lab/framework/issues"

[tool.setuptools.packages.find]
include = ["larapy*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["larapy"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
